Working on training components and splitting the navigation into components

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,14 @@
-<p>welcome works!</p>
+<div class="welcome" fxLayout="column" fxLayout.gt-md="row" fxLayout.gt-md="20px" fxLayoutAlign="center center">
+    <section>
+        <h1>Lorem ipsum dolor</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </section>
+    <section>
+        <h1>Lorem ipsum dolor</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </section>
+    <section>
+        <h1>Lorem ipsum dolor</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </section>
+</div>
