--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-    <a mat-list-item routerLink="/signup" (click)="onClose()">
+    <a mat-list-item routerLink="/signup" (click)="onClose()" *ngIf="!isAuth">
         <mat-icon>face</mat-icon>
         <span class="nav-caption">Signup</span>
     </a>
-    <a mat-list-item routerLink="/login" (click)="onClose()">
+    <a mat-list-item routerLink="/login" (click)="onClose()" *ngIf="!isAuth">
         <mat-icon>login</mat-icon>
         <span class="nav-caption">Login</span>
     </a>
-    <a mat-list-item routerLink="/training" (click)="onClose()">
+    <a mat-list-item routerLink="/training" (click)="onClose()" *ngIf="isAuth">
         <mat-icon>sports_gymnastics</mat-icon>
         <span class="nav-caption">Training</span>
     </a> 
-    <a mat-list-item routerLink="/" (click)="onClose()">
+    <a mat-list-item routerLink="/" (click)="onClose()" *ngIf="isAuth">
         <mat-icon>logout</mat-icon>
         <span class="nav-caption">Logout</span>
     </a>
