Working on route protection

--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -11,7 +11,7 @@
         <mat-icon>sports_gymnastics</mat-icon>
         <span class="nav-caption">Training</span>
     </a> 
-    <a mat-list-item routerLink="/" (click)="onClose()" *ngIf="isAuth">
+    <a mat-list-item routerLink="/" (click)="onLogout()" *ngIf="isAuth">
         <mat-icon>logout</mat-icon>
         <span class="nav-caption">Logout</span>
     </a>
