--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,11 +22,15 @@
             <mat-error>Missing password.</mat-error>
         </mat-form-field>
         <button 
+        *ngIf="!isLoading"
         type="submit" 
         mat-raised-button color="primary" 
         [disabled]="loginForm.invalid"
         color="accent">
         Submit
         </button>
+        <mat-spinner 
+        *ngIf="isLoading"
+        color="warn"></mat-spinner>
     </form>
 </section>
