--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,17 +3,21 @@
         <mat-card fxFlex.xs="100%" fxFlex="400px">
             <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
             <mat-card-content fxLayoutAlign="center">
-                <mat-form-field>
+                <mat-form-field *ngIf="!isLoading && exercises">
                     <mat-select placeholder="Select an exercise" ngModel name="exercise" required>
                         <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
                             {{ exercise.name }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
+                <mat-spinner *ngIf="isLoading" color="warn"></mat-spinner>
             </mat-card-content>
-            <mat-card-actions fxLayoutAlign="center">
-                <button type="submit" mat-button [disabled]="f.invalid">
+            <mat-card-actions *ngIf="!isLoading" fxLayoutAlign="center">
+                <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">
                     Start
+                </button>
+                <button *ngIf="!exercises" type="button" mat-button (click)="fetchExercises()">
+                    Fetch again
                 </button>
             </mat-card-actions>
         </mat-card>
