--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,3 +1,13 @@
 mat-form-field {
     width: 300px;
 }
+
+.signup {
+    height: calc(100vh - 56px);
+}
+
+@media screen and (min-width: 768px) {
+    .signup {
+        height: calc(100vh - 64px);
+    }
+}
