--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -3,6 +3,10 @@ a {
     color: black;
 }
 
+.menu {
+    color: black;
+}
+
 a:hover,
 a:active {
     color: white;
@@ -17,4 +21,17 @@ a:active {
 .nav-caption {
     display: inline-block;
     padding-left: 6px;
+}
+
+.logo {
+    width: 36px;
+}
+
+@media screen and (min-width: 768px) {
+    .logo {
+        width: 48px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
 }
