--- a/src/app/navigation/sidenav-list/sidenav-list.component.css
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.css
@@ -1,3 +1,7 @@
+div>mat-drawer-inner-container>n-tns-c3816625663-o {
+    background-color: black;
+}
+
 a {
     text-decoration: none;
     color: black;
