--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -7,8 +7,12 @@
         <mat-icon>login</mat-icon>
         <span class="nav-caption">Login</span>
     </a>
-    <a mat-list-item routerLink="/training" (click)="onClose()" *ngIf="isAuth">
+    <a mat-list-item routerLink="/courses" (click)="onClose()" *ngIf="isAuth">
         <mat-icon>sports_gymnastics</mat-icon>
+        <span class="nav-caption">Courses</span>
+    </a>
+    <a mat-list-item routerLink="/training" (click)="onClose()" *ngIf="isAuth">
+        <mat-icon>fitness_center</mat-icon>
         <span class="nav-caption">Training</span>
     </a> 
     <a mat-list-item routerLink="/" (click)="onLogout()" *ngIf="isAuth">
