--- a/src/app/training/current-training/current-training.component.css
+++ b/src/app/training/current-training/current-training.component.css
@@ -1,3 +1,10 @@
 .current-training {
     padding: 30px;
+    height: calc(100vh - 56px);
+}
+
+@media screen and (min-width: 768px) {
+    .current-training {
+        height: calc(100vh - 64px);
+    }
 }
