--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,5 +1,5 @@
 <section class="current-training" fxLayout="column" fxLayoutAlign="center center">
-    <mat-progress-spinner color="accent" mode="determinate" [value]="progress"></mat-progress-spinner>
+    <mat-progress-spinner color="primary" mode="determinate" [value]="progress"></mat-progress-spinner>
     <h1>{{ progress }}%</h1>
     <p>Keep on going, you can do it!</p>
     <button mat-raised-button color="warn" (click)="onStop()">Stop</button>
