--- a/src/app/training/new-training/new-training.component.css
+++ b/src/app/training/new-training/new-training.component.css
@@ -1,3 +1,10 @@
 .new-training {
     padding: 30px;
+    height: calc(100vh - 56px);
+}
+
+@media screen and (min-width: 768px) {
+    .new-training {
+        height: calc(100vh - 64px);
+    }
 }
