--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -2,12 +2,12 @@
 
 @include mat.core();
 
-$my-primary: mat.define-palette(mat.$red-palette, 500);
-$my-accent: mat.define-palette(mat.$red-palette, A200, A100, A400);
+$my-primary: mat.define-palette(mat.$yellow-palette, 500);
+$my-accent: mat.define-palette(mat.$yellow-palette, A200, A100, A400);
 
-$my-warn: mat.define-palette(mat.$indigo-palette);
+$my-warn: mat.define-palette(mat.$red-palette);
 
-$my-theme: mat.define-light-theme((
+$my-theme: mat.define-dark-theme((
  color: (
    primary: $my-primary,
    accent: $my-accent,
@@ -24,3 +24,5 @@ $my-theme: mat.define-light-theme((
 @include mat.button-theme($my-theme);
 
 // Include the theme mixins for other components you use here.
+
+@include mat.all-component-themes($my-theme);
